added quickstart guide
added a quickstart guide and updated the userstories

--- a/TSexplained.html
+++ b/TSexplained.html
@@ -234,11 +234,10 @@
   <p style="text-align: center;"><small>TimeSeed is free, open-source, and designed for a future where privacy is a human right.</small></p>
 
   <footer>
-    <a href="https://github.com/timeseed/timeseed.io">Source</a> | 
     <a href="https://timeseed.io/">Home</a> |
     <a href="https://timeseed.io/donate">Fund Development</a> | 
-    <a href="https://timeseed.io/userstories.html">User Stories</a> | 
-    <a href="https://timeseed.io/contact.html">Contact</a> |  
+    <a href="https://timeseed.io/userstories.html">User Stories</a> |  
+	 <a href="https://timeseed.io/quickstart.html">Quick Start here</a> | 
     version 1.13 
   </footer>
 </body>
