--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Support  TimeSeed.io</title>
+  <title>Support TimeSeed.io</title>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.4/lib/qrcode.min.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
     body {
@@ -11,22 +12,22 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      background-color: #2D2D2D; /* Dark TimeSeed background */
-      color: #F3F4F6; /* Light text */
+      background-color: #2D2D2D;
+      color: #F3F4F6;
     }
     .hero {
       text-align: center;
       padding: 4rem 2rem;
-      background: linear-gradient(180deg, #374151, #2D2D2D); /* Subtle gradient */
+      background: linear-gradient(180deg, #374151, #2D2D2D);
     }
     h1 {
-      color: #F59E0B; /* Orange for main header */
+      color: #F59E0B;
       font-weight: 700;
       font-size: 2.5rem;
       margin-bottom: 1rem;
     }
     h2 {
-      color: #F59E0B; /* Orange for subheaders */
+      color: #F59E0B;
       font-weight: 600;
       font-size: 1.5rem;
     }
@@ -34,18 +35,18 @@
       color: #F3F4F6;
     }
     a {
-      color: #0D9488; /* Teal link */
+      color: #0D9488;
       text-decoration: none;
     }
     a:hover {
-      color: #14B8A6; /* Teal hover */
+      color: #14B8A6;
       text-decoration: underline;
     }
     .container {
       max-width: 800px;
       margin: 0 auto;
       padding: 2rem;
-      background: #374151; /* Dark container */
+      background: #374151;
       border-radius: 1rem;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
@@ -59,7 +60,7 @@
       text-align: center;
     }
     .address {
-      background: #2D2D2D; /* Slightly darker for contrast */
+      background: #2D2D2D;
       padding: 1rem;
       border-radius: 0.5rem;
       font-family: monospace;
@@ -70,7 +71,7 @@
       border: 1px solid #6B7280;
     }
     .highlight-box {
-      background: rgba(13, 148, 136, 0.2); /* Teal highlight */
+      background: rgba(13, 148, 136, 0.2);
       padding: 1.5rem;
       border-radius: 0.75rem;
       margin-top: 2rem;
@@ -78,7 +79,7 @@
       border: 1px solid #0D9488;
     }
     button {
-      background: #F59E0B; /* Orange button */
+      background: #F59E0B;
       color: #F3F4F6;
       border: none;
       padding: 0.75rem 1.5rem;
@@ -89,11 +90,11 @@
       transition: background 0.2s ease, transform 0.2s ease;
     }
     button:hover {
-      background: #FBBF24; /* Orange hover */
+      background: #FBBF24;
       transform: translateY(-1px);
     }
     button:active {
-      background: #D97706; /* Darker orange */
+      background: #D97706;
     }
     .hidden {
       display: none;
@@ -112,7 +113,7 @@
       width: 40px;
       height: 40px;
       border: 4px solid #F3F4F6;
-      border-top: 4px solid #F59E0B; /* Orange spinner */
+      border-top: 4px solid #F59E0B;
       border-radius: 50%;
       animation: spin 1s linear infinite;
       margin: 1.5rem auto;
@@ -200,21 +201,20 @@
 
   <footer class="text-sm text-[#D1D5DB] mt-4 text-center">
     <a href="https://github.com/avbpodcast/timeseed.io" class="hover:text-[#14B8A6]">Source</a> | 
-    <a href="https://timeseed.io/TSexplained.html" class="hover:text-[#14B8A6]">How does it work?</a> |
-    <a href="https://timeseed.io/donate" class="hover:text-[#14B8A6]">Fund Development</a> | 
-    <a href="https://timeseed.io/#" onclick="downloadPage()" class="hover:text-[#14B8A6]">Download</a> | 
-    <a href="https://timeseed.io/contact.html" class="hover:text-[#14B8A6]">Contact</a> |  
-    version 1.13 
+    <a href="https://avbpodcast.github.io/timeseed.io/TSexplained.html" class="hover:text-[#14B8A6]">How does it work?</a> |
+    <a href="https://avbpodcast.github.io/timeseed.io/donate.html" class="hover:text-[#14B8A6]">Fund Development</a> | 
+    <a href="https://avbpodcast.github.io/timeseed.io" onclick="downloadPage()" class="hover:text-[#14B8A6]">Download</a> | 
+    <a href="https://avbpodcast.github.io/timeseed.io/contact.html" class="hover:text-[#14B8A6]">Contact</a> |  
+    version 1.13 beta
   </footer>
 
-  <script src="qrcode.min.js"></script>
   <script>
     // Preload images
     const images = [
-      'https://allesvoorbitcoin.be/donate/btc1.png',
-      'https://allesvoorbitcoin.be/donate/mr21.png',
-      'onchain.png',
-      'silent.png'
+      'https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/mr21.png',
+      'https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/bolt12.png',
+      'https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/onchain.png',
+      'https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/silent.png'
     ];
     images.forEach(src => {
       const img = new Image();
@@ -224,25 +224,25 @@
     const donationOptions = [
       {
         name: "Lightning Network",
-        image: "https://github.com/avbpodcast/timeseed.io/blob/main/mr21.png?raw=true",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/mr21.png",
         address: "mr21@walletofsatoshi.com",
         details: "<strong>Warning:</strong> Donate through Lightning Network to 'Mr21'."
       },
-	  { 
-	    name: "Lightning Network BOLT12",
-        image: "https://github.com/avbpodcast/timeseed.io/blob/main/bolt12.png?raw=true",
+      {
+        name: "Lightning Network BOLT12",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/bolt12.png",
         address: "fringecomic18@phoenixwallet.me",
-        details: "<strong>Warning:</strong> Donate through BOLT12 lighting network."
-		      },
+        details: "<strong>Warning:</strong> Donate through BOLT12 Lightning Network."
+      },
       {
         name: "Bitcoin On-Chain",
-        image: "https://github.com/avbpodcast/timeseed.io/blob/main/onchain.png?raw=true",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/onchain.png",
         address: "bc1pkgzpgtzz4g89nm8zfsw898ruq9k8az2h27p6fx9qtq8xkqfnqwwqlaefyq",
         details: "The best, preferred way to donate Bitcoin: on-chain, direct and without intermediaries. This is a Taproot address."
       },
       {
         name: "Silent Payment",
-        image: "silent.png",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/silent.png",
         address: "sp1qqt55kc75na7dtdhd0q8vhwa2tlhj3gce4maxs9eatrrce565cgllyqklmwyterna8r68gwups8a8gf6k6stg3ekg5g9lz32g8aw0s4ydrgn4sp9u",
         details: "Silent Payments are supported by Phoenix, Blue Wallet, DANA, Cake Wallet, and WabiSabi. More to come soon! <a href='https://github.com/bitcoin/bips/blob/master/bip-0353.mediawiki' target='_blank' rel='noopener noreferrer'>Learn more about BIP353</a>."
       }
@@ -274,21 +274,36 @@
       const spinner = qrDiv.querySelector('.spinner');
       spinner.style.display = 'block';
 
+      if (typeof QRCode === 'undefined' && !option.image) {
+        qrDiv.innerHTML = '<p style="color: #F87171;">Error: QR code generation failed. Please try again later.</p>';
+        spinner.style.display = 'none';
+        console.error('QRCode library not loaded');
+        return;
+      }
+
       setTimeout(() => {
         qrDiv.innerHTML = '';
         if (option.image) {
           const img = document.createElement('img');
           img.src = option.image;
           img.alt = `${option.name} QR Code`;
+          img.onerror = () => {
+            qrDiv.innerHTML = '<p style="color: #F87171;">Error: Failed to load QR code image.</p>';
+          };
           qrDiv.appendChild(img);
         } else if (option.address) {
-          new QRCode(qrDiv, {
-            text: option.address,
-            width: 300,
-            height: 300,
-            colorDark: '#F59E0B', /* Orange for QR code */
-            colorLight: '#2D2D2D' /* Match background */
-          });
+          try {
+            new QRCode(qrDiv, {
+              text: option.address,
+              width: 300,
+              height: 300,
+              colorDark: '#F59E0B',
+              colorLight: '#2D2D2D'
+            });
+          } catch (e) {
+            qrDiv.innerHTML = '<p style="color: #F87171;">Error: Failed to generate QR code.</p>';
+            console.error('QRCode generation error:', e);
+          }
         }
         spinner.style.display = 'none';
       }, 300);
@@ -301,7 +316,19 @@
       document.getElementById('details-address').textContent = '';
     }
 
-    window.onload = loadOptions;
+    function downloadPage() {
+      const htmlContent = document.documentElement.outerHTML;
+      const blob = new Blob([htmlContent], { type: 'text/html' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'timeseed-donate-v1_13.html';
+      a.click();
+      URL.revokeObjectURL(url);
+    }
+
+    // Load options immediately
+    loadOptions();
   </script>
 </body>
 </html>
