--- a/TSexplained.html
+++ b/TSexplained.html
@@ -174,7 +174,10 @@
   <h3>1. Generate a TimeSeed</h3>
   <p>Generate a random 50-character string on the open-source site. This is your TimeSeed—the root of all your derived keys.</p>
   <p class="warning"><i>Timeseeds are only used on the Timeseed tab/section, never on the Lockit tab/section!</i></p>
-
+  <p>Or check this playlist on youtube someone made: <a href="https://www.youtube.com/playlist?list=PLzQr5GCzaeLWWNW3PRI6TvHZgxmUCoViJ" target="_blank" rel="noopener noreferrer">
+  TimeSeed System – Instruction Playlist
+</a></p>
+  	
   <h3>2. Add a Pepper Password (Optional)</h3>
   <p>To separate contexts (by person, app, or situation), add a pepper password to the TimeSeed.</p>
   <p>Best practice: share the TimeSeed securely, and exchange the pepper separately—over a call or in person.</p>
