Fix HTML encoding issues in donate.html
fixed the silent payment address
removed the phoenix bolt12 (tech issue)

--- a/donate.html
+++ b/donate.html
@@ -229,12 +229,6 @@
         details: "<strong>Warning:</strong> Donate through Lightning Network to 'Mr21'."
       },
       {
-        name: "Lightning Network BOLT12",
-        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/bolt12.png",
-        address: "fringecomic18@phoenixwallet.me",
-        details: "<strong>Warning:</strong> Donate through BOLT12 Lightning Network."
-      },
-      {
         name: "Bitcoin On-Chain",
         image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/onchain.png",
         address: "bc1pkgzpgtzz4g89nm8zfsw898ruq9k8az2h27p6fx9qtq8xkqfnqwwqlaefyq",
@@ -242,8 +236,8 @@
       },
       {
         name: "Silent Payment",
-        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/silent.png",
-        address: "sp1qqt55kc75na7dtdhd0q8vhwa2tlhj3gce4maxs9eatrrce565cgllyqklmwyterna8r68gwups8a8gf6k6stg3ekg5g9lz32g8aw0s4ydrgn4sp9u",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/silent2.png",
+        address: "sp1qqv5t58fjkc77l7repqgy7x5pudp4dh3vypddle7eyplassvgvfp85qu3lfu2dd87ws8ltetshtdqut3yg3r9qm4650u5fwruwe0ad4u38gkkq3hr",
         details: "Silent Payments are supported by Phoenix, Blue Wallet, DANA, Cake Wallet, and WabiSabi. More to come soon! <a href='https://github.com/bitcoin/bips/blob/master/bip-0353.mediawiki' target='_blank' rel='noopener noreferrer'>Learn more about BIP353</a>."
       }
     ];
@@ -331,4 +325,5 @@
     loadOptions();
   </script>
 </body>
+
 </html>
