--- a/donate.html
+++ b/donate.html
@@ -171,7 +171,7 @@
 </head>
 <body>
   <div class="hero">
-    <h1>Support TimeSeed.io</h1>
+    <h1>Support TimeSeed.io / "AVB" </h1>
     <p>Your contributions fuel the development of our open-source, privacy-focused tools. <br>We operate on a value-for-value basis ... thank you for your support!</p>
   </div>
 
@@ -230,8 +230,8 @@
       },
       {
         name: "Bitcoin On-Chain",
-        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/onchain.png",
-        address: "bc1pkgzpgtzz4g89nm8zfsw898ruq9k8az2h27p6fx9qtq8xkqfnqwwqlaefyq",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/onchain2.png",
+        address: "bc1qf06skqt2mxl25lcppn7n62cdw2zq50rt6evta8",
         details: "The best, preferred way to donate Bitcoin: on-chain, direct and without intermediaries. This is a Taproot address."
       },
       {
