--- a/donate.html
+++ b/donate.html
@@ -232,7 +232,7 @@
         name: "Bitcoin On-Chain",
         image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/onchain2.png",
         address: "bc1qf06skqt2mxl25lcppn7n62cdw2zq50rt6evta8",
-        details: "The best, preferred way to donate Bitcoin: on-chain, direct and without intermediaries. This is a Taproot address."
+        details: "The best, preferred way to donate Bitcoin: on-chain, direct and without intermediaries."
       },
       {
         name: "Silent Payment",
@@ -327,3 +327,4 @@
 </body>
 
 </html>
+
