--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Support TimeSeed.io</title>
+  <title>Support TimeSeed.io / AVB </title>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.4/lib/qrcode.min.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
@@ -327,4 +327,5 @@
 </body>
 
 </html>
+
 
