Update footer links and version number to 1.14
added the v1 links in the URLs, no other changes

--- a/v1/index.html
+++ b/v1/index.html
@@ -793,11 +793,11 @@
 
     <footer class="text-sm text-[#D1D5DB] mt-4 text-center">
         <a href="https://github.com/avbpodcast/timeseed.io" class="hover:text-[#14B8A6]">Source</a> | 
-        <a href="https://timeseed.io/TSexplained.html" class="hover:text-[#14B8A6]">How does it work?</a> | 
-        <a href="https://timeseed.io/donate" class="hover:text-[#14B8A6]">Fund Development</a> | 
-        <a href="https://timeseed.io/#" onclick="downloadPage()" class="hover:text-[#14B8A6]">Download</a> | 
+        <a href="https://timeseed.io/v1/TSexplained.html" class="hover:text-[#14B8A6]">How does it work?</a> | 
+        <a href="https://timeseed.io/v1/donate" class="hover:text-[#14B8A6]">Fund Development</a> | 
+        <a href="https://timeseed.io/v1/#" onclick="downloadPage()" class="hover:text-[#14B8A6]">Download</a> | 
         <a href="https://timeseed.io/contact.html" class="hover:text-[#14B8A6]">Contact</a> | 
-        version 1.13
+        version 1.14
     </footer>
 <!-- Giving credit to timeseed.io 
 		This software is © 2025 
