--- a/donate.html
+++ b/donate.html
@@ -200,7 +200,7 @@
   <p style="text-align: center;"><small>TimeSeed is free, open-source, and designed for a future where privacy is a human right.</small></p>
 
   <footer class="text-sm text-[#D1D5DB] mt-4 text-center">
-    <a href="https://github.com/avbpodcast/timeseed.io" class="hover:text-[#14B8A6]">Source</a> | 
+    <a href="https://github.com/avbpodcast/timeseed.io" class="hover:text-[#14B8A6]">Sources</a>  
   </footer>
 
   <script>
@@ -322,6 +322,7 @@
 </body>
 
 </html>
+
 
 
 
