Fix HTML encoding issues in donate.html

--- a/donate.html
+++ b/donate.html
@@ -177,7 +177,7 @@
 
   <div class="container">
     <h2>Choose a Donation Method</h2>
-    <p>Select a cryptocurrency donation option below to support TimeSeed.io:</p>
+    <p>Select the Bitcoin donation option below to support TimeSeed.io:</p>
 
     <div id="options" class="options"></div>
 
@@ -322,6 +322,7 @@
 </body>
 
 </html>
+
 
 
 
