--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeseed – Choose Your Version</title>
+    <title>Timeseed.io</title>
 
     <!-- Google Fonts: Outfit for headings -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -357,4 +357,5 @@
     </footer>
 
 </body>
+
 </html>
