--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
         To support ongoing development (for v.3 ), consider our Value-4-Value model <a href="https://timeseed.io/donate.html">(V4V)</a>.
         <br><br>
         <a href="https://github.com/avbpodcast/timeseed.io">Source Code</a> |
+		<a href="https://github.com/avbpodcast/timeseed-v2">Source Code v2</a> |
         <a href="https://timeseed.io/v2/TSexplainedv2.html">How does it work?</a> |
         <a href="https://timeseed.io/donate.html">Donate</a>
     </footer>
@@ -359,3 +360,4 @@
 </body>
 
 </html>
+
