--- a/v2/TSexplainedv2.html
+++ b/v2/TSexplainedv2.html
@@ -248,10 +248,10 @@
   <p>The MD5 is: <code>AF200B6269E2783CBE2C6D027F3F2E47</code></p>
   <p>You can test this with the same information as the earlier text example (long-term key: <code>B2bb8…</code>).</p>
   <p>The image in .locked (encrypted) form can be downloaded from this link, then decrypted.</p>
-  <p><a href="https://example.org/tower_small.locked">Download tower_small.locked</a></p>
+  <p><a href="https://drive.google.com/file/d/1ytYD1agdZaJxLqnHMNMKgm3jCQpNf0C_/view">Download tower_small.locked</a></p>
   <p>Use a hashing tool (like <a href="http://www.quickhash-gui.org" target="_blank" rel="noopener noreferrer">QuickHash</a> or <a href="https://freefileviewers.com/hash/" target="_blank" rel="noopener noreferrer">free online hash checker</a>) to compare before and after hashes to verify no changes during encryption/decryption.</p>
   <p class="call-to-action">See if you can decrypt the .locked file to match the original image!</p>
-  <p><a href="https://github.com/avbpodcast/timeseed.io/blob/main/tower_small.png.locked"><img src="https://github.com/avbpodcast/timeseed.io/blob/main/tower_small.png.locked" alt="Tower small image" class="example-image"></a></p>
+  <p><a href="https://drive.google.com/file/d/1ytYD1agdZaJxLqnHMNMKgm3jCQpNf0C_/view"><img src="https://drive.google.com/file/d/1ytYD1agdZaJxLqnHMNMKgm3jCQpNf0C_/view" alt="Tower small image" class="example-image"></a></p>
 <hr>
 <section class="notice ios-limitation">
 <p>
