Update image source in TSexplainedv2.html

--- a/v2/TSexplainedv2.html
+++ b/v2/TSexplainedv2.html
@@ -251,7 +251,7 @@
   <p><a href="https://drive.google.com/file/d/1ytYD1agdZaJxLqnHMNMKgm3jCQpNf0C_/view">Download tower_small.locked</a></p>
   <p>Use a hashing tool (like <a href="http://www.quickhash-gui.org" target="_blank" rel="noopener noreferrer">QuickHash</a> or <a href="https://freefileviewers.com/hash/" target="_blank" rel="noopener noreferrer">free online hash checker</a>) to compare before and after hashes to verify no changes during encryption/decryption.</p>
   <p class="call-to-action">See if you can decrypt the .locked file to match the original image!</p>
-  <p><a href="https://drive.google.com/file/d/1ytYD1agdZaJxLqnHMNMKgm3jCQpNf0C_/view"><img src="https://drive.google.com/file/d/1ytYD1agdZaJxLqnHMNMKgm3jCQpNf0C_/view" alt="Tower small image" class="example-image"></a></p>
+  <p><a href="https://drive.google.com/file/d/1ytYD1agdZaJxLqnHMNMKgm3jCQpNf0C_/view"><img src="https://github.com/avbpodcast/timeseed.io/blob/main/v2/tower_small_preview.png?raw=true" alt="Tower small image" class="example-image"></a></p>
 <hr>
 <section class="notice ios-limitation">
 <p>
