--- a/donate.html
+++ b/donate.html
@@ -216,24 +216,24 @@
       img.src = src;
     });
 
-    const donationOptions = [
+     const donationOptions = [
       {
         name: "Lightning Network",
-        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/v1/mr21.png",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/mr21.png",
         address: "mr21@walletofsatoshi.com",
         details: "<strong>Warning:</strong> Donate through Lightning Network to 'Mr21'."
       },
       {
         name: "Bitcoin On-Chain",
-        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/v1/onchain2.png",
-        address: "bc1qf06skqt2mxl25lcppn7n62cdw2zq50rt6evta8",
-        details: "The best, preferred way to donate Bitcoin: on-chain, direct and without intermediaries."
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/onchain3.png",
+        address: "bc1qrjc6mduhqn7sp3l2dfu6e268lrvemkgm6akhm4",
+        details: "The preferred way to donate Bitcoin: on-chain, direct and without intermediaries."
       },
       {
         name: "Silent Payment",
-        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/v1/silent2.png",
+        image: "https://raw.githubusercontent.com/avbpodcast/timeseed.io/main/silent2.png",
         address: "sp1qqv5t58fjkc77l7repqgy7x5pudp4dh3vypddle7eyplassvgvfp85qu3lfu2dd87ws8ltetshtdqut3yg3r9qm4650u5fwruwe0ad4u38gkkq3hr",
-        details: "Silent Payments are supported by Phoenix, Blue Wallet, DANA, Cake Wallet, and WabiSabi. More to come soon! <a href='https://github.com/bitcoin/bips/blob/master/bip-0353.mediawiki' target='_blank' rel='noopener noreferrer'>Learn more about BIP353</a>."
+        details: "Silent Payments, supported by Phoenix, Blue Wallet, DANA, Cake Wallet, and WabiSabi. More to come soon! <a href='https://github.com/bitcoin/bips/blob/master/bip-0353.mediawiki' target='_blank' rel='noopener noreferrer'>Learn more about BIP353</a>."
       }
     ];
 
@@ -322,6 +322,7 @@
 </body>
 
 </html>
+
 
 
 
