Update Nostr contact details and copy function

--- a/contact.html
+++ b/contact.html
@@ -89,12 +89,11 @@
   <p>We value your feedback, questions, or suggestions about TimeSeed. Reach out to us securely using the following contact method:</p>
 
  <h2>Contact via Nostr</h2>
-<p>To get in touch, use Nostr with our public key or visit our profile:</p>
+<p>To get in touch, use a nostr public key for Nostr or preferable via keychat.io :</p>
 <div class="nostr-key-container">
-  <pre class="wrapped-pre">npub1sec6degc3ae7warveuxaz6dlffnc2sutwtqjr7pmll7sf7ypjngsd4p0l7</pre>
+  <pre class="wrapped-pre">npub17smml0nvxmh26phcg4l6zvmpws2czt6eypyauslf8nf6ddptgmesfhuvjq</pre>
   <button class="copy-btn" onclick="copyNostrKey()">📋 Copy</button>
 </div>
-<p>Or visit our Nostr profile: <a href="https://primal.net/p/nprofile1qqsgvudxu5vg7ul8w3kv7rw3dxl55eu9gw9h9sfplqalllgylzqef5gndpqdh" class="nostr-link">Primal Profile</a></p>
 
   <h2>Secure Communication</h2>
   <p>For enhanced privacy, you can encrypt your message using TimeSeed's long-term (6-month) password.<br> This is the TimeSeed string to use:</p>
@@ -105,7 +104,7 @@
   <p style="text-align: center;"><small>TimeSeed is free, open-source, and designed for a future where privacy is a human right.</small></p>
 <script>
 function copyNostrKey() {
-  const key = 'npub1sec6degc3ae7warveuxaz6dlffnc2sutwtqjr7pmll7sf7ypjngsd4p0l7';
+  const key = 'npub17smml0nvxmh26phcg4l6zvmpws2czt6eypyauslf8nf6ddptgmesfhuvjq';
   navigator.clipboard.writeText(key).then(() => {
     const btn = document.querySelector('.copy-btn');
     btn.textContent = '✅ Copied!';
