--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeseed.io</title>
-
+    <title>TimeSeed.io</title>
     <!-- Google Fonts: Outfit for headings -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
-
     <style>
         :root {
             --accent: #0d9488;
@@ -17,10 +15,9 @@
             --accent-light: #ccbdb9;
             --border-accent: #0d9488;
             --badge-bg: #0d9488;
-            --title-color: #ffffff;     /* Pure white for the main title – stands out */
-            --slogan-color: #a0e0d8;     /* Soft light teal – calmer, complementary */
+            --title-color: #ffffff; /* Pure white for the main title – stands out */
+            --slogan-color: #a0e0d8; /* Soft light teal – calmer, complementary */
         }
-
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
             background: linear-gradient(to bottom, #0f0f1a, #1a1a2e);
@@ -34,40 +31,34 @@
             line-height: 1.5;
             text-align: center;
         }
-
         h1, h2, h3 {
             font-family: 'Outfit', system-ui, sans-serif;
             letter-spacing: -0.5px;
         }
-
         h1 {
             color: var(--title-color);
             margin-bottom: 12px;
             font-size: 3.2rem;
             font-weight: 700;
         }
-
         /* Slogan + tagline group – tighter spacing */
         .header-group {
             margin: 0 auto 48px;
             max-width: 800px;
         }
-
         .slogan {
-            margin: 0 0 8px 0;           /* Very tight gap to the tagline below */
+            margin: 0 0 8px 0; /* Very tight gap to the tagline below */
             font-size: 1.8rem;
             font-weight: 600;
             color: var(--slogan-color);
             line-height: 1.3;
         }
-
         .tagline {
             font-size: 1.1rem;
             color: #b0b0b0;
             margin: 0;
             font-weight: 400;
         }
-
         .container {
             display: flex;
             justify-content: center;
@@ -76,7 +67,6 @@
             margin: 0 auto;
             align-items: stretch;
         }
-
         .card {
             background: #16213e;
             border: 1px solid #2a2a4a;
@@ -85,12 +75,10 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.3);
             transition: transform 0.5s ease, box-shadow 0.2s ease;
         }
-
         .card:hover {
             transform: translateY(-1px);
             box-shadow: 0 6px 16px rgba(13,148,136,0.18);
         }
-
         .card h2 {
             color: var(--accent);
             margin: 20px 0 16px;
@@ -101,13 +89,11 @@
             justify-content: center;
             gap: 12px;
         }
-
         .card p {
             color: #cccccc;
             margin-bottom: 28px;
             font-size: 1rem;
         }
-
         .card a {
             display: inline-block;
             padding: 14px 32px;
@@ -119,16 +105,13 @@
             font-size: 1.05rem;
             transition: background 0.3s ease;
         }
-
         .card a:hover {
             background: var(--accent-hover);
         }
-
         .logo {
             height: 42px;
             width: auto;
         }
-
         .badge {
             background: var(--badge-bg);
             color: #fff;
@@ -139,7 +122,6 @@
             display: inline-block;
             margin-bottom: 12px;
         }
-
         .card-v2 {
             width: 440px;
             display: flex;
@@ -147,7 +129,6 @@
             gap: 32px;
             border: 4px solid var(--border-accent);
         }
-
         .companion {
             background: #101a33;
             border: 1px solid #2a3a6a;
@@ -155,7 +136,6 @@
             padding: 24px;
             box-shadow: inset 0 0 0 1px rgba(13,148,136,0.15);
         }
-
         .companion h3 {
             color: var(--accent-light);
             font-size: 1.2rem;
@@ -165,29 +145,24 @@
             justify-content: center;
             gap: 10px;
         }
-
         .companion p {
             font-size: 0.95rem;
             color: #d0d0d0;
             margin-bottom: 16px;
         }
-
         .companion small {
             display: block;
             margin-top: 12px;
             font-size: 0.8rem;
             color: #999;
         }
-
         .card-v1 {
             width: 340px;
             opacity: 0.85;
         }
-
         .card-v1 h2 {
             color: #a0a0a0;
         }
-
         .info-tooltip {
             cursor: help;
             font-size: 1rem;
@@ -203,11 +178,9 @@
             margin-left: 10px;
             transition: background 0.2s ease;
         }
-
         .info-tooltip:hover {
             background: rgba(255,255,255,0.25);
         }
-
         .tooltip-text {
             visibility: hidden;
             background: #16213e;
@@ -227,13 +200,10 @@
             z-index: 10;
             pointer-events: none;
         }
-
-        .info-tooltip:hover .tooltip-text,
-        .info-tooltip:focus .tooltip-text {
+        .info-tooltip:hover .tooltip-text, .info-tooltip:focus .tooltip-text {
             visibility: visible;
             opacity: 1;
         }
-
         footer {
             margin-top: 64px;
             color: #808080;
@@ -242,16 +212,13 @@
             margin-left: auto;
             margin-right: auto;
         }
-
         footer a {
             color: var(--accent);
             text-decoration: none;
         }
-
         footer a:hover {
             text-decoration: underline;
         }
-
         @media (max-width: 900px) {
             .container {
                 flex-direction: column;
@@ -262,7 +229,6 @@
                 max-width: 440px;
             }
         }
-
         @media (max-width: 600px) {
             body {
                 padding: 20px;
@@ -280,84 +246,73 @@
     </style>
 </head>
 <body>
-
     <h1>TimeSeed.io</h1>
-
     <!-- Tighter header group: slogan + tagline with minimal spacing -->
     <div class="header-group">
-        <h2 class="slogan">Deterministic keys.<br>Time-based. Offline. Quantum resistant. No middlemen.</h2>
-        <p class="tagline">Encryption / Decryption</p>
+        <h2 class="slogan">Secure encryption keys you can recreate anytime.<br>Fully offline. Quantum-safe. No third parties.</h2>
+        <p class="tagline">Simple, private message encryption and decryption</p>
     </div>
 
     <div class="container">
         <!-- v2 PRIMARY -->
         <div class="card card-v2">
-
             <div>
                 <div class="badge">Recommended</div>
                 <h2>
-                    <img src="tslogo2.png" alt="Timeseed 2 Logo" class="logo">
-                    Timeseed v2
+                    <img src="tslogo2.png" alt="Timeseed 2 Logo" class="logo"> Timeseed v2
                 </h2>
                 <p>
-                    It's a standalone Argon2 memory-hard key derivation <br>and AES-GCM encryption tool
-                    with <br>a cleaner and more intuitive interface.
+                    The easiest and most modern version.<br>
+                    Enter a secret phrase and a date – it creates a strong, unique key every time (the same key if you use the same phrase and date).<br>
+                    Use that key to safely encrypt or decrypt messages.<br>
+                    Everything happens in your browser – no internet needed.
                 </p>
                 <a href="https://timeseed.io/v2/" aria-label="Launch Timeseed version 2, recommended">Launch TimeSeed v2 →</a>
             </div>
 
             <div class="companion">
                 <h3>
-                    <img src="lockitlogo1.png" alt="Lockit Logo" class="logo">
-                    Lockit — Phone companion tool
+                    <img src="lockitlogo1.png" alt="Lockit Logo" class="logo"> Lockit — Phone companion
                 </h3>
                 <p>
-                    Just the Encrypt/Decrypt text tool <br>
-                    Using <strong>TimeSeed v2-derived keys</strong>.<br>
-                    Fully client-side, memory-hard, quantum resistant, no servers.
-                    Ideal for modern phones.
+                    A lightweight tool made for phones.<br>
+                    Quickly encrypt or decrypt text using keys created with TimeSeed v2.<br>
+                    Runs entirely on your device – nothing is sent to any server.<br>
+                    Perfect for secure messaging on the go.
                 </p>
                 <a href="https://timeseed.io/Lockit/">Open Lockit →</a>
-                <small>Only compatible with TimeSeed v2</small>
+                <small>Works only with keys from TimeSeed v2</small>
             </div>
-
         </div>
 
         <!-- v1 LEGACY with tooltip -->
         <div class="card card-v1">
             <h2>
-                <img src="tslogo1.png" alt="Timeseed Logo" class="logo">
-                Timeseed v1
+                <img src="tslogo1.png" alt="Timeseed Logo" class="logo"> Timeseed v1
                 <span class="info-tooltip" aria-label="Compatibility info">?
                     <span class="tooltip-text">
-                        v1 and v2 are not cross-compatible<br>
-                        (except for the shared 50-character TimeSeed and Lockit key format)
+                        Keys from v1 and v2 are not compatible with each other<br>
+                        (except the shared 50-character seed format used in Lockit)
                     </span>
                 </span>
             </h2>
             <p>
-                The original implementation (April 2025) for compatibility with
-                existing seeds. <br>Uses PBKDF2 and AES-GCM. More than secure enough, still works great and compatible with most devices.
-             </p>
+                The original version (released April 2025).<br>
+                Kept available for anyone who already has messages or seeds created with it.<br>
+                Still very secure and works on any device.
+            </p>
             <a href="/v1/index.html" aria-label="Launch Timeseed version 1, legacy">Launch v1 →</a>
         </div>
-
     </div>
 
     <footer>
-        Each version includes its own How-To guide.
-        <br>
-        Timeseed runs entirely offline (or online) in your browser — no servers, no central authority, no key custody.
-        <br>
-        To support ongoing development (for v.3 ), consider our Value-4-Value model <a href="https://timeseed.io/donate.html">(V4V)</a>.
-        <br><br>
+        Each version includes its own step-by-step guide.<br>
+        TimeSeed runs completely in your browser – it works offline or online, with no servers, no accounts, and no one else ever sees your keys.<br>
+        To help support future improvements (like v3), consider donating through our Value-4-Value model <a href="https://timeseed.io/donate.html">(V4V)</a>.<br><br>
         <a href="https://github.com/avbpodcast/timeseed.io">Source Code</a> |
-		<a href="https://github.com/avbpodcast/timeseed-v2">Source Code v2</a> |
+        <a href="https://github.com/avbpodcast/timeseed-v2">Source Code v2</a> |
         <a href="https://timeseed.io/v2/TSexplainedv2.html">How does it work?</a> |
         <a href="https://timeseed.io/donate.html">Donate</a>
     </footer>
-
 </body>
-
 </html>
-
