Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -285,26 +285,21 @@
             </div>
         </div>
 
-        <!-- v1 LEGACY with tooltip -->
+               <!-- v1 LEGACY  -->
         <div class="card card-v1">
             <h2>
                 <img src="tslogo1.png" alt="Timeseed Logo" class="logo"> Timeseed v1
-                <span class="info-tooltip" aria-label="Compatibility info">?
-                    <span class="tooltip-text">
-                        Keys from v1 and v2 are not compatible with each other<br>
-                        (except the shared 50-character seed format used in Lockit)
-                    </span>
                 </span>
             </h2>
             <p>
                 The original version (released April 2025).<br>
-                Kept available for anyone who already has messages or seeds created with it.<br>
-                Still very secure and works on any device.
+                Kept available as legecy method for messages or seeds created with it.<br>
+                Still secure and works on any device. Basis version. 
             </p>
             <a href="/v1/index.html" aria-label="Launch Timeseed version 1, legacy">Launch v1 →</a>
         </div>
     </div>
-
+    
     <footer>
         Each version includes its own step-by-step guide.<br>
         TimeSeed runs completely in your browser – it works offline or online, with no servers, no accounts, and no one else ever sees your keys.<br>
@@ -316,3 +311,4 @@
     </footer>
 </body>
 </html>
+
