Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <img src="lockitlogo1.png" alt="Lockit Logo" class="logo"> Lockit — Phone companion
                 </h3>
                 <p>Simple phone tool to quickly encrypt/decrypt text using TimeSeed v3 keys (or direct passwords). Runs fully on your device — no data sent anywhere. Perfect for secure messaging on the go.</p>
-                <a href="https://timeseed.io/Lockit/" class="btn">Open Lockit →</a>
+                <a href="https://timeseed.io/lockit/" class="btn">Open Lockit →</a>
                 <small>Updated for v3 keys</small>
             </div>
         </div>
@@ -297,3 +297,4 @@
     </footer>
 </body>
 </html>
+
